samples/_failures_safe/1761169263_c10f3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00573e1f.c: In function ‘subtract_matrices’:
./samples/SAFE/__tmp_00573e1f.c:154:13: error: expected expression at end of input
  154 |             if ((b->data[i][j] > 0 && a->data[i][j] <
      |             ^~
./samples/SAFE/__tmp_00573e1f.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00573e1f.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_00573e1f.c:154:13: error: expected declaration or statement at end of input
